.provarCaches/00D5f000005vwGkEAI/objects/rstk__iclotexp__c.object
<CustomObject>
    <description>iclotexp__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__iclotexp_consumpdatef__c</fullName>
        <label>Project Consumption Date (per Forecast)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__iclotexp_consumpdateu__c</fullName>
        <label>Project Consumption Date (per Usage)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__iclotexp_datearrived__c</fullName>
        <label>Date Arrived at WMS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__iclotexp_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Lot Expiration Analysis</relationshipLabel>
        <relationshipName>iclotexps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iclotexp_expdate__c</fullName>
        <label>Lot Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__iclotexp_explossqtyf__c</fullName>
        <label>Projected Expiration Loss (per Forecast)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iclotexp_explossqtyu__c</fullName>
        <label>Projected Expiration Loss (per Usage)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iclotexp_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Item Number</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Lot Expiration Analysis</relationshipLabel>
        <relationshipName>iclotexps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iclotexp_lotno__c</fullName>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iclotexp_lotqty__c</fullName>
        <label>Location Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Lot Expiration Analysis</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lot Expiration Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>